2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Copy constraints final values in result object.
	* src/roboptim-core-ipopt-plugin.cc: Copy constraints final
	value in result.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Use symmetric matrices in Hessian computation.
	* src/roboptim-core-ipopt-plugin.cc: Replace generic matrices
	by symmetric matrices in Hessian computation.

2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove useless copy.
	* src/roboptim-core-ipopt-plugin.cc: Remove useless lambda copy.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Make compilation more robust.
	* ipopt.mk: Here.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Libtool warning.
	* ipopt.mk: New.
	* src/Makefile.am,
	* tests/Makefile.am: Do not link directly against a module
	but against sources.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Make compilation more robust.
	* tests/Makefile.am: Here.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Use new documentation rules.
	* configure.ac: Here.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Make compilation more robust.
	* src/Makefile.am: Use PTHREAD_CFLAGS.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix test suite.
	* tests/hs071.hh,
	* tests/plugin.cc,
	* tests/simple.cc: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with share.
	* tests/hs071.hh: Here.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate reference.
	Display has been updated in roboptim-core.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize constraints.
	* include/roboptim/core/plugin/ipopt.hh,
	* src/roboptim-core-ipopt-plugin.cc,
	* tests/hs071.hh,
	* tests/plugin.cc,
	* tests/simple.cc:
	Update to new generalized constraint system.
